# messageService

./: .gitignore  README.md  pyproject.toml
src/: config_reader.py  example.env  token_gen.py
src/app/: app.py  utils.py
src/app/services/: __init__.py  email_service.py  mail_and_tg.py
src/app/templates/: error.html  info.html
